injection on httpservice

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8">
     <title>React Seed</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      This will be replaced if JavaScript is run
+    </div>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
+    <script src="bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
